# simple

./: README.md  agent.py  config.example.json  memory_projection.py  pyproject.toml  tool_runtime.py
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-23T13-04-09-595Z.yml  page-2026-04-23T13-07-15-673Z.yml
agent/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  evolution.py  lexical.py  pathing.py  shared.py
agent/channels/: __init__.py  base.py
agent/core/: __init__.py  agent.py  attachments.py  output.py  transport.py
agent/domain/: __init__.py
agent/memory/: __init__.py  system.py
agent/orchestration/: __init__.py  planner.py  runtime.py
agent/plugins/: __init__.py  catalog.py
agent/runtime/: __init__.py  contracts.py  heartbeat.py
agent/scheduler/: __init__.py  delivery.py  models.py  (+2 more)
channels/: __init__.py  feishu.py
scripts/: __init__.py  benchmark_memory.py
simple.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skills/: README.md
tests/: conftest.py  test_agent_integration.py  test_attachments.py  test_background_memory.py  test_builtin_tools.py  test_channel_layer.py  test_consolidation.py  test_content_filter.py  test_evolution.py  test_fact_store.py  test_feishu_channel.py  test_heartbeat.py  test_lexical.py  test_ltm_store.py  test_memory_benchmark.py  test_memory_palace_store.py  test_output_dir.py  test_plugin_catalog.py  test_retriever.py  test_runtime_contracts.py  test_scheduler.py  test_shell_security.py  test_single_file_layout.py  test_staging.py  test_tool_executor.py
(+57 files in other folders)
