[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simple"
version = "0.1.0"
description = "Personal AI agent package with a memory palace and provider abstraction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic",
  "openai",
  "typer",
  "rich",
  "mcp",
]

[project.optional-dependencies]
# pip install simple[feishu]  /  uv sync --extra feishu
feishu = ["lark-oapi"]

[project.scripts]
simple = "agent.cli:app"

[dependency-groups]
dev = [
  "pytest",
  "lark-oapi",   # needed by tests/test_feishu_channel.py
]

[tool.setuptools.packages.find]
include = ["agent*", "channels*"]
